--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script rel="stylesheet" type = "style/text" href="assets/style.css"></script>
+   
     <title>Train Schedule</title>
 </head>
 <body>
 <div class="container">
-
-
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Anytime is Train Time</h1>
+          <p class="lead">CHOO CHOO! WOO WOO!</p>
+        </div>
+      </div>
+      </div>
 
 
 
