--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Script -->
-    <script src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,8 +20,9 @@
 </head>
 
 <body>
-    <div class="container">
-
+        <script src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
+    
+        <div class="container">
         <!-- Jumbotron -->
         <div class="jumbotron" style="background-color:blue color: white">
             <h1 class="text-center">Anytime is Train Time</h1>
@@ -69,32 +70,27 @@
                             </div>
                             <div class="form-group">
                                 <label for="destination-input">Destination</label>
-                                <input class="form-control" id="destination-input" placeholder="NYC" type="text">
+                                <input class="form-control" id="destination-input" placeholder="New York City"
+                                    type="text">
                             </div>
                             <div class="form-group">
                                 <label for="time-input">First Train Time (HH:mm - military time)</label>
-                                <input class="form-control" id="time-input" placeholder="2400" type="text">
+                                <input class="form-control" id="time-input" placeholder="5:35pm" type="text">
                             </div>
                             <div class="form-group">
                                 <label for="frequency-input">Frequency (min)</label>
-                                <input class="form-control" id="frequency-input" placeholder="3600" type="text">
+                                <input class="form-control" id="frequency-input" placeholder="10" type="text">
                             </div>
                             <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
                         </form>
-
                     </div>
                 </div>
             </div>
         </div>
-
+    </div>
     </div>
 
 
-
-
-
-
-    </div>
     <script src="assets/train.js"></script>
 </body>
 
