--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="container">
         <!-- Jumbotron -->
-        <div class="jumbotron" style="background-color:blue color: white">
+        <div class="jumbotron" style="background-color: maroon; color: white">
             <h1 class="text-center">Anytime is Train Time</h1>
             <h3 class="text-center">CHOO CHOO! WOO WOO!</h3>
         </div>
@@ -39,11 +39,11 @@
 
             <div class="col-md-12">
 
-                <!-- Current Employees-->
+                <!-- Current Trains-->
                 <div class="card mb-4">
-                    <div class="card-header">Current Train Schedule</div>
+                    <div class="card-header" style="background-color: maroon; color: white">Current Train Schedule</div>
                     <div class="card-body">
-                        <table class="table table-sm table-hover" id='employee-table'>
+                        <table class="table table-sm table-hover" id='train-table'>
                             <thead>
                                 <tr>
                                     <th scope="col">Train Name</th>
@@ -63,9 +63,9 @@
 
         <div class="row">
             <div class="col-md-12">
-                <!-- Add Employee  -->
+                <!-- Add Train -->
                 <div class="card mb-4">
-                    <div class="card-header">Add Train</div>
+                    <div class="card-header" style="background-color: maroon; color: white">Add Train</div>
                     <div class="card-body">
 
                         <!-- Entry Form -->
