--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="container">
         <!-- Jumbotron -->
-        <div class="jumbotron" style="background-color: maroon; color: white">
+        <div class="jumbotron" style="background-color:  rgb(119, 119, 212); color: white">
             <h1 class="text-center">Anytime is Train Time</h1>
             <h3 class="text-center">CHOO CHOO! WOO WOO!</h3>
         </div>
@@ -41,7 +41,7 @@
 
                 <!-- Current Trains-->
                 <div class="card mb-4">
-                    <div class="card-header" style="background-color: maroon; color: white">Current Train Schedule</div>
+                    <div class="card-header" style="background-color: rgb(119, 119, 212); color: white">Current Train Schedule</div>
                     <div class="card-body">
                         <table class="table table-sm table-hover" id='train-table'>
                             <thead>
@@ -65,7 +65,7 @@
             <div class="col-md-12">
                 <!-- Add Train -->
                 <div class="card mb-4">
-                    <div class="card-header" style="background-color: maroon; color: white">Add Train</div>
+                    <div class="card-header" style="background-color: rgb(119, 119, 212); color: white">Add Train</div>
                     <div class="card-body">
 
                         <!-- Entry Form -->
