--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
+
     <!--jquery-->
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--firebase -->
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
@@ -18,8 +19,6 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
-    
     <!--css-->
     <script rel="stylesheet" type="style/text" href="assets/style.css"></script>
 
@@ -44,7 +43,8 @@
 
                 <!-- Current Trains-->
                 <div class="card mb-4">
-                    <div class="card-header" style="background-color: rgb(119, 119, 212); color: white">Current Train Schedule</div>
+                    <div class="card-header" style="background-color: rgb(119, 119, 212); color: white">Current Train
+                        Schedule</div>
                     <div class="card-body">
                         <table class="table table-sm table-hover" id='train-table'>
                             <thead>
