--- a/index.html
+++ b/index.html
@@ -69,7 +69,15 @@
                 <!-- Add Train -->
                 <div class="card mb-4">
                     <div class="card-header" style="background-color: rgb(119, 119, 212); color: white">Add Train</div>
-                    <div class="card-body">
+                    
+                    <div class="col-lg-6">
+                        <div class="card card-default">
+                          <div class="card-header">
+                            <h2 id="train-display"></h2>
+                            <h4 id="destination-display"></h4>
+                            <h4 id="time-display"></h4>
+                            <p id="frequency-display"></p>
+                    </div>
 
                         <!-- Entry Form -->
                         <form>
@@ -92,6 +100,8 @@
                             </div>
                             <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
                         </form>
+
+                        
                     </div>
                 </div>
             </div>
