--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- Current Trains-->
                 <div id="schedule" class="card">
-                    <div class="card-header">Current Train Schedule</div>
+                    <div class="card-header"><b>Current Train Schedule</b></div>
                     <div class="card-body">
                         <table class="table table-sm table-hover" id='train-table'>
                             <thead>
@@ -79,22 +79,22 @@
                                     <!-- Entry Form -->
                                     <form>
                                         <div class="form-group">
-                                            <label for="train-name-input">Train Name</label>
+                                            <label for="train-name-input"><b>Train Name</b></label>
                                             <input class="form-control" id="train-name-input" placeholder="Train"
                                                 type="text">
                                         </div>
                                         <div class="form-group">
-                                            <label for="destination-input">Destination</label>
+                                            <label for="destination-input"><b>Destination</b></label>
                                             <input class="form-control" id="destination-input"
                                                 placeholder="New York City" type="text">
                                         </div>
                                         <div class="form-group">
-                                            <label for="time-input">First Train Time (HH:mm - military time)</label>
+                                            <label for="time-input"><b>First Train Time (HH:mm - military time)</b></label>
                                             <input class="form-control" id="time-input" placeholder="5:35pm"
                                                 type="text">
                                         </div>
                                         <div class="form-group">
-                                            <label for="frequency-input">Frequency (min)</label>
+                                            <label for="frequency-input"><b>Frequency (min)</b></label>
                                             <input class="form-control" id="frequency-input" placeholder="3"
                                                 type="text">
                                         </div>
