--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr class="k">
+                                <tr class="train crap">
                                     <td id="train-display"></td>
                                     <td id="destination-display"></td>
                                     <td id="frequency-display"></td>
@@ -89,7 +89,8 @@
                                                 placeholder="New York City" type="text">
                                         </div>
                                         <div class="form-group">
-                                            <label for="time-input"><b>First Train Time (HH:mm - military time)</b></label>
+                                            <label for="time-input"><b>First Train Time (HH:mm - military
+                                                    time)</b></label>
                                             <input class="form-control" id="time-input" placeholder="5:35pm"
                                                 type="text">
                                         </div>
