--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                                     <td id="train-display"></td>
                                     <td id="destination-display"></td>
                                     <td id="frequency-display"></td>
-                                    <td id="next-display"></td>
                                     <td id="time-display"></td>
+                                    <td id="minutes-display"></td>
                                 </tr>
                             </tbody>
                         </table>
