--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr class="train crap">
+                                <tr class="train-crap">
                                     <td id="train-display"></td>
                                     <td id="destination-display"></td>
                                     <td id="frequency-display"></td>
