--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                                     <th scope="col">Minutes Away</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr class="train-crap">
+                            <tbody class="train-crap">
+                                <tr>
                                     <td id="train-display"></td>
                                     <td id="destination-display"></td>
                                     <td id="frequency-display"></td>
